--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:h2:mem:shop
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:shop;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.username=realcryzed
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
